# XGC_analysis

./: .gitmodules  CMakeLists.txt  README.md  adios2cfg.xml
CMake/: FindCAMTIMERS.cmake
GB_setup/ITER_1024/: input  xgcs.0
GB_setup/ITER_2048/: input  petsc.rc  xgcs.0
GB_setup/ITER_4096/: adios2cfg.xml  input  xgcs.0
diffusion/: CMakeLists.txt  diffusion.py  diffusion_adiosread_demo.py  diffusion_main.cpp
heatload/: CMakeLists.txt  flags.hpp  heatload.cpp  heatload.hpp  heatload_calc.cpp  heatload_calc.hpp  initialize.cpp  load.cpp  load.hpp  main.cpp  output.cpp  output.hpp  particles.cpp  particles.hpp  separate.cpp  sml.hpp
middleman/: CMakeLists.txt  diffusion.cpp  diffusion.hpp  heatloadcalc.cpp  heatloadcalc.hpp  middleman.cpp  util.hpp
panout/: README.md  adios2-panin.py  adios2-panout.py
poincare/: README.md  config  config.summit  plotPoincare.py  poincare.xml
poincare/scripts/: README  bp2plot.py  bp2txt.py  diffPuncs.py  plotPoincare.py  plotPunc.py  processPunctures.py  traceError.py  truncator.py
poincare/vtk-m/examples/: CMakeLists.txt
poincare/vtk-m/examples/hello_worklet/: HelloWorklet.cxx
poincare/vtk-m/examples/poincare/: CMakeLists.txt  ComputeAs.h  ComputeAsCell.h  ComputeB.h  ComputeBCell.h  EvalField.cxx  EvalField.h  FindMaxR.cxx  FindMaxR.h  Poincare.cxx  Poincare.cxx.WORKS  Poincare.h  Poincare2.1.h  Poincare2.h  Poincare3.h  README  RunPoincare2.cxx  RunPoincare2.h  Simple.cxx  Simple2.2.cxx  Simple2.3.cxx  Simple2.cxx  Simple3.cxx  Simple4.cxx  XGCParameters.h  io.cxx  io.h
poincare/vtk-m/examples/poincare/perfstubs_api/: timer.c  timer.h
poincare/vtk-m/vtkm/: CMakeLists.txt  Particle.h
poincare/vtk-m/vtkm/cont/: ArrayHandleXGCCoordinates.h  CMakeLists.txt  CellLocatorChooser.h  CellLocatorGeneral.cxx  CellLocatorGeneral.h  CellLocatorTwoLevelTriangle.cxx  CellLocatorTwoLevelTriangle.h  CellLocatorXGCGrid.cxx  CellLocatorXGCGrid.h
poincare/vtk-m/vtkm/cont/internal/: CellLocatorBase.h
poincare/vtk-m/vtkm/cont/openmp/internal/: DeviceAdapterAlgorithmOpenMP.cxx
poincare/vtk-m/vtkm/cont/testing/: CMakeLists.txt  UnitTestCellLocatorGeneral.cxx
poincare/vtk-m/vtkm/exec/: CMakeLists.txt  CellLocator.h  CellLocatorBoundingIntervalHierarchy.h  CellLocatorMultiplexer.h  CellLocatorTwoLevel.h  CellLocatorTwoLevelTriangle.h  CellLocatorUniformGrid.h  CellLocatorXGCGrid.h
poincare/vtk-m/vtkm/filter/: CMakeLists.txt
poincare/vtk-m/vtkm/internal/: VariantImplDetail.h
poincare/vtk-m/vtkm/io/: CMakeLists.txt
poincare/vtk-m/vtkm/rendering/: CMakeLists.txt
poincare/vtk-m/vtkm/worklet/: CMakeLists.txt  ParticleAdvection.h
poincare/vtk-m/vtkm/worklet/particleadvection/: CellInterpolationHelper.h  ParticleAdvectionWorklets.h  Particles.h
poincare/vtk-m/vtkm/worklet/testing/: UnitTestParticleAdvection.cxx
util/: cam_timers.hpp
