set(CMAKE_CXX_STANDARD 14)

find_package (MPI COMPONENTS CXX)
find_package (ADIOS2 REQUIRED COMPONENTS CXX MPI)
find_package (OpenMP)
find_package(CAMTIMERS)
message(STATUS ${CAMTIMERS_INCLUDE_DIRS})
message(STATUS ${CAMTIMERS_LIBRARIES})
if(CAMTIMERS_FOUND)
    include_directories(${CAMTIMERS_INCLUDE_DIRS})
    add_definitions(-DCAM_TIMERS)
    add_definitions(-DHAVE_MPI)
endif()

set(Boost_USE_STATIC_LIBS OFF) 
set(Boost_USE_MULTITHREADED OFF)  
set(Boost_USE_STATIC_RUNTIME OFF) 
find_package(Boost COMPONENTS log log_setup program_options filesystem)
message(STATUS "Boost_INCLUDE_DIRS: " "${Boost_INCLUDE_DIRS}")
message(STATUS "Boost_LIBRARIES: " "${Boost_LIBRARIES}")
include_directories(${Boost_INCLUDE_DIRS})
include_directories(${PROJECT_SOURCE_DIR}/util)

add_executable (middleman middleman.cpp diffusion.cpp heatloadcalc.cpp)
include_directories(${PROJECT_SOURCE_DIR}/heatload)
target_link_libraries (middleman adios2::adios2 MPI::MPI_C)
target_link_libraries (middleman ${Boost_LIBRARIES})
target_link_libraries (middleman heatloadlib)
if(CAMTIMERS_FOUND)
    target_link_libraries(middleman CAMTIMERS::CAMTIMERS)
endif()
